test/files/pos/t8852/Interface.java
public interface Interface {
  public static int staticMethod() {
    return 42;
  }
}
