test/files/neg/sd128/A.java
interface A {
  default int f() { return -10; }
}
